--- a/.github/ISSUE_TEMPLATE/entry_request.yml
+++ b/.github/ISSUE_TEMPLATE/entry_request.yml
@@ -37,6 +37,6 @@ body:
       label: For Maintainers
       options:
         - label: Labels added
-          required: true
+          required: false
         - label: Issue is assigned
           required: false
