--- a/.github/ISSUE_TEMPLATE/bug_reports.yml
+++ b/.github/ISSUE_TEMPLATE/bug_reports.yml
@@ -50,6 +50,6 @@ body:
       label: For Maintainers
       options:
         - label: Labels added
-          required: true
+          required: false
         - label: Issue is assigned
           required: false
