--- a/.github/ISSUE_TEMPLATE/entry_edit.yml
+++ b/.github/ISSUE_TEMPLATE/entry_edit.yml
@@ -35,6 +35,6 @@ body:
       label: For Maintainers
       options:
         - label: Labels added
-          required: true
+          required: false
         - label: Issue is assigned
           required: false
