--- a/.github/ISSUE_TEMPLATE/entry_request.yml
+++ b/.github/ISSUE_TEMPLATE/entry_request.yml
@@ -1,6 +1,6 @@
 name: Entry Request
 description: Request for a single new topic, concept, or term entry.
-title: "[Entry] Topic: Entry Name"
+title: "[Entry] Subject: Entry Name"
 labels: ["new entry"]
 assignees: "Name here"
 body:
