--- a/.github/ISSUE_TEMPLATE/bug_reports.yml
+++ b/.github/ISSUE_TEMPLATE/bug_reports.yml
@@ -1,6 +1,6 @@
 name: Bug Report
 description: Brief description of bug in code/codebytes in a single topic, concept, or term entry.
-title: "[Bug/Error] Subject : Entry Name"
+title: "[Bug/Error] Subject: Entry Name"
 labels: ["bug"]
 assignees: "Name here"
 body:
@@ -50,6 +50,6 @@ body:
       label: For Maintainers
       options:
         - label: Labels added
-          required: true
+          required: false
         - label: Issue is assigned
           required: false
